cmake_minimum_required(VERSION 3.5)

project(mycryptolabs LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory("mycryptolib")
add_subdirectory("lab2")
add_subdirectory("lab3")
add_subdirectory("lab4")
add_subdirectory("lab5")
add_subdirectory("lab6")
add_subdirectory("lab7")
add_subdirectory("lab8")
#add_subdirectory("lab9")
#add_subdirectory("lab10")
#add_subdirectory("lab11")
